# parcpak

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/tables/: Buckner7.csv  Diedrichsen.csv  Schaefer2018_1000Parcels_7Networks.csv  Schaefer2018_100Parcels_7Networks.csv  Schaefer2018_200Parcels_7Networks.csv  Schaefer2018_300Parcels_7Networks.csv  Schaefer2018_400Parcels_7Networks.csv  Schaefer2018_500Parcels_7Networks.csv  Schaefer2018_600Parcels_7Networks.csv  Schaefer2018_700Parcels_7Networks.csv  Schaefer2018_800Parcels_7Networks.csv  Schaefer2018_900Parcels_7Networks.csv  Tian_Subcortex_S1_3T_label.csv  Tian_Subcortex_S2_3T_label.csv  Tian_Subcortex_S3_3T_label.csv  Tian_Subcortex_S4_3T_label.csv
parcpack/: main.py
parcpak/: __init__.py  main.py
