[tool.poetry]
name = "parcpak"
version = "23.10.0rc0"
description = ""
authors = ["Dan Gale <dan@voxel.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10.dev0"
pandas = "^2.1.1"
numpy = "^1.26.1"
nibabel = "^5.1.0"
nilearn = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
bumpversion = "^0.6.0"
reorder-python-imports = "^3.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
