[tool.poetry]
name = "parcpak"
version = "23.10.0rc1"
description = ""
authors = ["Dan Gale <dan@voxel.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
numpy = "1.21.2"
pandas = "1.5.3"
nibabel = "^5.1.0"
nilearn = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
bumpversion = "^0.6.0"
reorder-python-imports = "^3.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
